--- a/udqAutoApp/plugins/cn.jpush.phonegap.JPushPlugin/plugin.xml
+++ b/udqAutoApp/plugins/cn.jpush.phonegap.JPushPlugin/plugin.xml
@@ -152,7 +152,7 @@
             <receiver android:name="cn.jpush.android.service.AlarmReceiver"/>
             <!-- Required  . Enable it you can get statistics data with channel -->
             <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-            <meta-data android:name="JPUSH_APPKEY" android:value="your appkey"/>
+            <meta-data android:name="JPUSH_APPKEY" android:value="822d47efdfb496c27e730ffe"/>
         </config-file>
         <source-file src="src/android/jpush-sdk-release1.7.5.jar" target-dir="libs"/>
         <source-file src="src/android/armeabi/libjpush175.so" target-dir="libs/armeabi"/>
