修改消息推送插件

--- a/udqAutoApp/plugins/cordova-plugin-leanpush/package.json
+++ b/udqAutoApp/plugins/cordova-plugin-leanpush/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/BenBBear/cordova-plugin-leanpush/issues"
   },
-  "homepage": "https://github.com/BenBBear/cordova-plugin-leanpush"
+  "homepage": "https://github.com/BenBBear/cordova-plugin-leanpush",
+  "devDependencies": {
+    "xml2js": "^0.4.9"
+  }
 }
