--- a/udqAutoApp/plugins/cn.jpush.phonegap.JPushPlugin/plugin.xml
+++ b/udqAutoApp/plugins/cn.jpush.phonegap.JPushPlugin/plugin.xml
@@ -67,6 +67,10 @@
             <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
             <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+          <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+          <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+          <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+          <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
 			<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
             <permission
                     android:name="$PACKAGE_NAME.permission.JPUSH_MESSAGE"
