--- a/udqAutoApp/res/native/android/ant.properties
+++ b/udqAutoApp/res/native/android/ant.properties
@@ -1,4 +1,4 @@
-key.store=
-key.alias=
-key.store.password=
-key.alias.password=
+key.store=E:/visual studio 2015/Projects/udqAuto/udqAutoApp/res/native/android/udqApp.keystore
+key.alias=udqApp.keystore
+key.store.password=111111
+key.alias.password=111111
