Revert "1、“我要洗车”界面显示处理； 2、“订单”删除h2、p提示错误标签；"
This reverts commit 1edf98699fe208a309074417f2bb5ec29825ec03.

--- a/udqAutoApp/res/native/android/ant.properties
+++ b/udqAutoApp/res/native/android/ant.properties
@@ -1,4 +1,4 @@
-key.store=udqApp.keystore
+key.store=E:/visual studio 2015/new/udqproject/udqAutoApp/res/native/android/udqApp.keystore
 key.alias=udqApp.keystore
 key.store.password=111111
 key.alias.password=111111
